<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="image_desc">BMI Logo</string>
    <string name="text_root">BMI Analyzer</string>
    <string name="button_name"><u><b>Next</b></u></string>
    <string name="text_second">Welcome Back</string>
    <string name="text_third">If you already have an account,log in</string>
    <string name="box1">Username</string>
    <string name="box2">Password</string>
    <string name="login_text">LOG IN</string>
    <string name="text_hint">You Don t Have An Account?</string>
    <string name="btn_sign">Sign Up</string>
    <string name="create_text">Create New Account</string>
    <string name="text_create_2">If you do not already have an account</string>
    <string name="hint_1">Name</string>
    <string name="hint_2">E-Mail</string>
    <string name="hint_4">Re-Password</string>
    <string name="create">CREATE</string>
    <string name="text_end">You Have An Account ?</string>
    <string name="text_complete">Complete Your\nInformation</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_weight">Weight</string>
    <string name="text_length">Length</string>
    <string name="text_increase">+</string>
    <string name="text_decrease">-</string>
    <string name="text_unit">hg</string>
    <string name="text_unit_length">cm</string>
    <string name="text_data">Date Of Birth</string>
    <string name="text_btn_save">Save Data</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_record">New Record</string>
    <string name="add_food">Add Food Details</string>
    <string name="text_calary">Calary</string>
    <string name="unit_calary">cal/g</string>
    <string name="upload">UpLoad Photo</string>
    <string name="save">Save</string>
    <string name="personal_inf">Hi,Mohammed</string>
    <string name="current_status">Current Status</string>
    <string name="current_old">Old Status</string>
    <string name="current_hint">Normal(still Good)</string>
    <string name="add_btn">Add Food</string>
    <string name="add_record_btn">Add Record</string>
    <string name="view">View Food</string>
    <string name="btn_logout"><u><b>Logout</b></u></string>
    <string name="underWeightDetails"> underWeight,So Bad</string>
    <string name="Normal">Normal,Still Good</string>
    <string name="Overweight">Overweight,Go Ahead</string>
    <string name="Obesity">Obesity</string>
    <string name="photo">photo</string>
    <string-array name="weight">
        <item>item1</item>
        <item>item2</item>
    </string-array>
    <string name="category">Category</string>
    <string name="food_list">Food List</string>
    <string name="edit_food">Edit Food Details</string>
</resources>