<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".registration">

        <TextView
            android:id="@+id/text_top"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="50dp"
            android:text="@string/create_text"
            android:textAlignment="center"
            android:textColor="@color/blue_max"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_top_sec"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/text_create_2"
            android:textAlignment="center"
            android:textColor="@color/text_box"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:textSize="20sp"
                android:background="@drawable/edit_style"
                android:id="@+id/name"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_2"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/edit_style"
                android:id="@+id/e_mail"/>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/box2"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/edit_style"
                android:id="@+id/password2"/>
        </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_4"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/edit_style"
                android:id="@+id/re_password"/>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="23dp"
                android:background="@drawable/login_button"
                android:text="@string/create"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_end"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:text="@string/text_end"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/log_in"
                android:layout_width="52dp"
                android:layout_height="49dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@color/blue_max"
                android:textSize="12sp" />


        </LinearLayout>

</LinearLayout>
