<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/personal_inf"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/current"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:text="@string/current_status"
        android:textColor="@color/blue_max"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_current"
        android:layout_width="361dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/edit_box_home"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingTop="1dp"
        />

    <TextView
        android:id="@+id/current_old"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/current_old"
        android:textColor="@color/blue_max"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_food_btn"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_button"
            android:onClick="save_btn1"
            android:text="@string/add_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save_btn1"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/login_button"
            android:onClick="add"
            android:text="@string/add_record_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/view_home"
        android:layout_width="351dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_button"
        android:text="@string/view"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_logout"
            android:textAlignment="center"
            android:textColor="@color/text_box"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
